<resources>
    <string name="app_name">T-Port</string>
    <string name="bottom_item_bonuses">Бонусы</string>
    <string name="bottom_item_search">Поиск</string>
    <string name="bottom_item_profile">Профиль</string>
    <string name="bottom_item_orders">Заказы</string>
    <string name="search_item_from_place">Откуда</string>
    <string name="search_item_to_place">Куда</string>
    <string name="button_text_pick_up">Подобрать</string>
    <string name="search_item_travel_data">Когда</string>
    <string name="popular_title_item">Популярные направления:</string>
    <string name="popular_background_description">Фон карточки на главном меню</string>
    <string name="welcome_message">Добро пожаловать!</string>
    <string name="enter_phone_number">Для того, чтобы начать, введите ваш номер телефона</string>
    <string name="text_send_code">Мы отправим вам одноразовый код для регистрации</string>
    <string name="button_continue">Продолжить</string>
    <string name="text_did_send_code">Мы отправили вам код на номер</string>
    <string name="did_get_code_question">Не получили код?</string>
    <string name="button_resend_code">Отправить ещё раз</string>
    <string name="error_wrong_number">Неправильный номер</string>
    <string name="error_wrong_code">Неправильный код</string>
    <string name="phone">Телефон</string>
    <string name="phone_example">Телефон в формате +7 123 4567890 для связи в случае изменений в рейсе</string>
    <string name="personal_data">Персональные данные</string>
    <string name="button_add_passenger">Добавить пассажира</string>
    <string name="cards">Карты</string>
    <string name="add_card">Добавить карту</string>
    <string name="notify_about_discounts">Уведомлять об акциях и скидках</string>
    <string name="notify_about_order_status">Уведомлять о статусе заказов и бронирования</string>
    <string name="image_view_logo_description" translatable="false">TPort</string>
    <string name="image_button_change_destination">Изменить направление</string>
    <string name="menu_filter">Фильтр</string>
    <string name="search_routes_toolbar_title">Поиск маршрутов</string>
    <string name="trip_details_toolbar_title">Маршрут</string>
    <string name="search_routes_toolbar_begin_label">Начало:</string>
    <string name="search_routes_toolbar_end_label">Конец:</string>search_routes_toolbar_when_label
    <string name="search_routes_toolbar_when_label">Когда:</string>
    <string name="image_view_filter_button">Кнопка фильтрация</string>
    <string name="extended_fab_book_trip">Забронировать этот маршрут</string>
    <string name="image_view_route_type_description">Картинка типа маршрута</string>
    <string name="image_view_code_first">Первая цифра кода</string>
    <string name="image_view_code_second">Вторая цифра кода</string>
    <string name="image_view_code_third">Третья цифра кода</string>
    <string name="image_view_code_fourth">Четвёртая цифра кода</string>
    <string name="arrival_time">Время прибытия - %1$s</string>
    <string name="time_in_travel">Время в пути - %1$s</string>
    <string name="short_arrival_time">Прибытие:</string>
    <string name="is_paid">Оплачено</string>
    <string name="not_paid">Не оплачено!</string>
    <string name="money" translatable="false">%1$d ₽</string>
    <string name="hint_name">Имя</string>
    <string name="one_direction">В одну сторону</string>
    <string name="both_directions">Туда-обратно</string>
    <string name="type_of_transports_prefer">Предпочитаемые виды транспорта:</string>
    <string name="avia">Авиа</string>
    <string name="taxi">Такси</string>
    <string name="trains">Поезда</string>
    <string name="baggage">Багаж</string>
    <string name="cost">Стоимость</string>
    <string name="сomfort">Комфорт</string>
    <string name="duration_trip">Длительность поездки</string>
    <string name="extended_fab_confirm">Подтвердить</string>
    <string name="current_order">Текущий заказ:</string>
    <string name="coming_order">Предстоящие поездки:</string>
    <string name="history_order">История:</string>
    <string name="minus" translatable="false">—</string>
    <string name="date_time_label">Даты поездки</string>
</resources>
